--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <h1> Hi there, I'm Leo and this is my new website I like pokemon cards. </h1>
     <p>
-      <img src="images/illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300">  
+      <img src="illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300">  
     </p>
   </body>
 </html>
