--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <body>
     <h1> Hi there, I'm Leo and this is my new website I like pokemon cards. </h1>
+    <h2> Here are some of my favorite cards: </h2>
     <p>
-      <img src="illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300">  
+      <img src="illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300"> 
+      <img src="illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300"> 
     </p>
   </body>
 </html>
