--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h2> Here are some of my favorite cards: </h2>
     <p>
       <img src="illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300"> 
-      <img src="umbreonvmax.jpg" alt="Umbreon Vmax" width="200" height="300"> 
+      <img src="umbreonvmax.jpeg" alt="Umbreon Vmax" width="200" height="300"> 
     </p>
   </body>
 </html>
