--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1> Hi there, I'm Leo and this is my new website I like pokemon cards. </h1>
+    <h1> Hi there, I'm Leo and this is my new website. I like pokemon cards. </h1>
     <h2> Here are some of my favorite cards: </h2>
     <p>
-      <img src="illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300"> 
-      <img src="umbreonvmax.jpeg" alt="Umbreon Vmax" width="200" height="300">
-      <img src="arceusvmax.jpeg" alt="Arceus Vmax" width="200" height="300"> 
-      <img src="arceustheelemental.jpeg" alt="Arceus Elemental" width="200" height="300"> 
+      <img src="images/illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300"> 
+      <img src="images/umbreonvmax.jpeg" alt="Umbreon Vmax" width="200" height="300">
+      <img src="images/arceusvmax.jpeg" alt="Arceus Vmax" width="200" height="300"> 
+      <img src="images/arceustheelemental.jpeg" alt="Arceus Elemental" width="200" height="300"> 
 
       
     </p>
