--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <p>
       <img src="images/illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300"> 
       <img src="images/umbreonvmax.jpeg" alt="Umbreon Vmax" width="200" height="300">
-      <img src="images/arceusvmax.jpeg" alt="Arceus Vmax" width="200" height="300"> 
+      <img src="images/arceusvmax.jpg" alt="Arceus Vmax" width="200" height="300"> 
       <img src="images/arceustheelemental.jpeg" alt="Arceus Elemental" width="200" height="300"> 
 
       
