--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         my stories
     </h2>
     <h3>
-      June 24th: 
+      June 24th: Once I had a Pikachu Vmax. My friend traded some pokemon cards, one of was a really cool card. 
+      We checked it out. We asked the expert at cards and coffee. He said 20p real 80p fake. We sent it to PSA to authenticaet the card.
+      A few days ago, we found out it's real! (grade 5)
     </h3>
   </body>
 </html>
