--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h2>
     <h3>
       June 24th: Once I had a Pikachu Vmax. My friend traded some pokemon cards, one of which was a really cool card. 
-      We checked it out. We asked the expert at cards and coffee. He said 20p real 80p fake. We sent it to PSA to authenticaet the card.
+      We checked it out. We asked the expert at cards and coffee. He said 20p real 80p fake. We sent it to PSA to authenticate the card.
       A few days ago, we found out it's real! (grade 5)
     </h3>
   </body>
