--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1> Hi there, I'm Leo and this is my new website. I like pokemon cards. </h1>
+    <h1> Hi there, I'm Leo and this is my new website. I like pokemon cards a lot. </h1>
     <h2> Here are some of my favorite cards: </h2>
     <p>
       <img src="images/illustratedpikachu.jpg" alt="Illustrated Pikachu" width="200" height="300"> 
